[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/components/production_panel/production_panel.gd" id="1_production"]

[node name="ProductionPanel" type="Control"]
custom_minimum_size = Vector2(450, 350)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_production")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12, 0.14, 0.16, 0.95)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "生产食物"
horizontal_alignment = 1

[node name="ModeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
text = "选择要生产的食物类型和数量"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ProductsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="SummaryLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "生产数量: 0 / 0 | 预计成本: $0"
horizontal_alignment = 1

[node name="ButtonRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 2
theme_override_constants/separation = 10

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonRow"]
custom_minimum_size = Vector2(100, 36)
layout_mode = 2
text = "取消"

[node name="ConfirmButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonRow"]
custom_minimum_size = Vector2(100, 36)
layout_mode = 2
text = "确认生产"
